# listenbrainz-to-sqlite

./: .envrc  .gitignore  README.org  flake.nix  metadata.yml  pyproject.toml  yoyo.ini
datasette_listenbrainz_importer/: __init__.py  db.py
listenbrainz_to_sqlite/: __init__.py  db.py
listenbrainz_to_sqlite/migrations/: 20211020_01_pPnmB-create-initial-schema.py  20211020_01_pPnmB-create-initial-schema.rollback.sql  20211020_01_pPnmB-create-initial-schema.sql  20211020_02_Zp8BO-add-updated-at-timestamps.rollback.sql  20211020_02_Zp8BO-add-updated-at-timestamps.sql  20220927_01_0FE35-save-msids.rollback.sql  20220927_01_0FE35-save-msids.sql
